# BMS_Capstone

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/bms/: CMakeLists.txt  soc.cpp  soh.cpp
components/bms/include/: soc.h  soh.h
components/daly_bms_arduino/: CMakeLists.txt  daly_bms_arduino.cpp
components/daly_bms_arduino/include/: daly_bms_arduino.h  daly_bms_arduino_cfg.h
components/daly_bms_serial/: CMakeLists.txt  daly_bms_serial.cpp  daly_bms_serial.h
components/daly_bms_serial/include/: daly_bms_serial.h
components/i2c_helper/: CMakeLists.txt  i2c_helper.c  i2c_helper.h  i2c_helper_cfg.h
components/lvgl__lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_spi_conf.h
components/lvgl__lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  hx8357.c
components/lvgl__lvgl_esp32_drivers/lvgl_touch/: FT53xx.c  FT53xx.h  Kconfig  touch_driver.c  touch_driver.h
components/lvgl_driver/: CMakeLists.txt  FT53xx.c  FT53xx.h  FT53xx_cfg.h  hx8357.c  hx8357.h  hx8357_cfg.h  lvgl_driver_init.c  lvgl_helper.c
components/lvgl_driver/lvgl_i2c/: FT533xx_cfg.h  FT53xx.c  FT53xx.h
components/lvgl_example/: CMakeLists.txt  lvgl_example.c  lvgl_menu_example2.c
components/lvgl_example/include/: lvgl_example.h
components/mcp3202/: CMakeLists.txt  mcp3202.c
components/mcp320x/: CMakeLists.txt  mcp320x.cpp  mcp320x_helper.cpp
components/peripherals/: CMakeLists.txt  adc.c  gpio.c
components/sd_card_helper/: CMakeLists.txt  sd_card_helper.c
components/spi_helper/: CMakeLists.txt  spi_helper.c  spi_helper.h  spi_helper_cfg.h  spi_init.c  spi_init.h
components/spi_manager/: CMakeLists.txt  disp_spi.c  spi_manager.c
components/timing/: CMakeLists.txt  timing.c
components/ui/: CMakeLists.txt  ui_animation.c  ui_animations.cpp  ui_main.c  ui_main.cpp  ui_manager.c  ui_manager.cpp  ui_screen.c  ui_screen.cpp
components/ui/colour_swap/: colour_swap.c  colour_swap.h
components/ui/include/: ui_animation.h  ui_animations.h  ui_main.h  ui_manager.h  ui_screen.h
components/ui/widgets/: battery_widget.c  battery_widget.h
main/: CMakeLists.txt  global_vars.c  global_vars.h  idf_component.yml  main.c  main.cpp  main_cfg.h  main_dalyBms.cpp  main_singleCell.cpp
main/ui/: screens.c  screens.h  styles.h  ui.c  ui.h
scripts/: calc_resistance.py  data.txt  plot_data.py  test_matrix.py  volt_divider.py
scripts/log/: log_data.py  log_serial.py  plot_output_data.py  test_serial.py
(+8 files in other folders)
